2012-02-11 Raphael Neider <rneider AT web.de>

	* device/include/pic16/signal.h:
	  explicitly access SFRs via access bank, closes #3482876

2012-02-11 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt,
	  device/non-free/include/pic14/pic16f1946.h,
	  device/non-free/include/pic14/pic16f1947.h,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/pic16f1946.c,
	  device/non-free/lib/pic14/libdev/pic16f1947.c,
	  doc/sdccman.lyx:
	  enabled/added devices

	* device/non-free/lib/pic14/libdev/testall.sh:
	  test support for all devices by compiling a source file

	* device/non-free/lib/pic14/libdev/mkall.sh,
	  support/scripts/inc2h.pl:
	  improved regenerating device support files

2012-02-11 Borut Razem <borut.razem AT gmail.com>

	* device/include/pic14/pic14devices.txt,
	  device/non-free/include/pic14/pic16f1503.h,
	  device/non-free/include/pic14/pic16f1507.h,
	  device/non-free/include/pic14/pic16f1508.h,
	  device/non-free/include/pic14/pic16f1509.h,
	  device/non-free/include/pic14/pic16f1516.h,
	  device/non-free/include/pic14/pic16f1517.h,
	  device/non-free/include/pic14/pic16f1518.h,
	  device/non-free/include/pic14/pic16f1519.h,
	  device/non-free/include/pic14/pic16f1526.h,
	  device/non-free/include/pic14/pic16f1527.h,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/pic16f1503.c,
	  device/non-free/lib/pic14/libdev/pic16f1507.c,
	  device/non-free/lib/pic14/libdev/pic16f1508.c,
	  device/non-free/lib/pic14/libdev/pic16f1509.c,
	  device/non-free/lib/pic14/libdev/pic16f1516.c,
	  device/non-free/lib/pic14/libdev/pic16f1517.c,
	  device/non-free/lib/pic14/libdev/pic16f1518.c,
	  device/non-free/lib/pic14/libdev/pic16f1519.c,
	  device/non-free/lib/pic14/libdev/pic16f1526.c,
	  device/non-free/lib/pic14/libdev/pic16f1527.c: